--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
