--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.9",
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.5",
+    "assemblyscript": "^0.20.6",
     "react": "^18.1.0",
     "react-animations": "^1.0.0",
     "react-dom": "^18.1.0",
@@ -22,9 +23,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:react": "react-scripts build",
+    "build": "npm run asbuild:release && npm run build:react",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "asbuild:debug": "asc assembly/index.ts --target debug",
+    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild": "npm run asbuild:debug && npm run asbuild:release"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +50,14 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "assemblyscript": "^0.20.6"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/release.js",
+      "types": "./build/release.d.ts"
+    }
   }
 }
