--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.5",
     "assemblyscript": "^0.20.6",
+    "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-animations": "^1.0.0",
     "react-dom": "^18.1.0",
